kubernetes/yamls/CKS/SECCOMP_POD_DEFINITION.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-audit
spec:
  securityContext:
    seccompProfile:
      type: Localhost
      localhostProfile:                         # <path to custom JSON file>  relative to  /var/lib/kubelet/seccomp 
                                                # mkdir -p /var/lib/kubelet/seccomp/profiles
                                                #  /var/lib/kubelet/seccomp/profiles/audit.json
                                                #  $grep syscall /var/log/syslog
                                                #  $ grep -w 35 /usr/include/asm/unistd_64.h   => #define __NR_nanosleep 35
  containers:
  - command: ["bash", "-c", "echo 'I just made some syscalls' && sleep 100"]
    image: ubuntu
    name: ubuntu
    securityContext:
      allowPrivilegeEscalation: false
